frontend/tests/cases/positive/if0pair.gr
foo : (Int, Int) -> Int
foo (4, 4) = 5;
foo (5, _) = 4
