frontend/tests/cases/negative/refutable2.gr
foo : Int -> Int
foo 2 = 4
